--- a/configpanel/AndroidManifest.xml
+++ b/configpanel/AndroidManifest.xml
@@ -21,8 +21,13 @@
           android:versionCode="7"
           android:versionName="2.4" >
 
+    <protected-broadcast android:name="com.android.systemui.doze.pulse" />
+
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="evervolv.permission.HARDWARE_ABSTRACTION_ACCESS" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
 
     <uses-sdk
         android:minSdkVersion="24" />
@@ -52,6 +57,20 @@
             android:label="@string/button_panel_title">
             <intent-filter>
                 <action android:name="org.lineageos.settings.device.ADDITIONAL_BUTTONS_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <!-- Doze settings -->
+        <service android:name=".DozeService"
+                 android:permission="OneplusDozeService">
+        </service>
+
+        <activity
+            android:name=".DozeSettingsActivity"
+            android:label="@string/ambient_display_title">
+            <intent-filter>
+                <action android:name="org.lineageos.settings.device.DOZE_SETTINGS" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
