common: Allow control over PocketMode service
 * Once the service is running, proximity sensor is constantly active
   when the display is turned off, resulting into a residual increase
   in battery consumption. Add a toggle so that users can decide whether
   they accept that and prefer to prevent accidental wake-ups triggered
   by the fingerprint sensor.
 * Keep the receiver that listens for the screen status registered only
   if the fingerprint wake-up feature is enabled at the same time as
   the accidental wake-up prevention feature.
 * Set PocketMode as a required module of ConfigPanel, to make sure
   it is only shipped on devices building the latter.

Change-Id: I5941f445d0bd77be1efa9ffcde2d9854e6446c3d

--- a/configpanel/AndroidManifest.xml
+++ b/configpanel/AndroidManifest.xml
@@ -21,6 +21,8 @@
           android:versionCode="7"
           android:versionName="2.4" >
 
+    <protected-broadcast android:name="org.lineageos.pocketmode.UPDATE" />
+
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.INJECT_EVENTS"/>
