oppo-common: KeyHandler: Use VibrationEffect
The method vibrate(long milliseconds) was deprecated in API level 26
(https://developer.android.com/reference/android/os/Vibrator?hl=en#vibrate(long))

Change-Id: Icf937393b4b1031a46e4c122ff2f71d2a5353779

--- a/configpanel/AndroidManifest.xml
+++ b/configpanel/AndroidManifest.xml
@@ -23,6 +23,7 @@
 
     <protected-broadcast android:name="org.lineageos.pocketmode.UPDATE" />
 
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="evervolv.permission.HARDWARE_ABSTRACTION_ACCESS" />
 
     <uses-sdk
