Revert "configpanel: disable button settings by default"
This reverts commit e94c4feb323b57f3beb05c36d7cc4e7245b05e53.

Change-Id: I5e61506ade718a19379ce7c925da9fef58aca2d4

--- a/configpanel/AndroidManifest.xml
+++ b/configpanel/AndroidManifest.xml
@@ -51,8 +51,7 @@
         <!-- Additional button settings (Button settings) -->
         <activity
             android:name=".ButtonSettingsActivity"
-            android:label="@string/button_panel_title"
-            android:enabled="false">
+            android:label="@string/button_panel_title">
             <intent-filter>
                 <action android:name="org.lineageos.settings.device.ADDITIONAL_BUTTONS_SETTINGS" />
                 <category android:name="android.intent.category.DEFAULT" />
